Fix the touchable new tab button Fitts' Law behavior

BUG=834143

Change-Id: I946b2761866549a5736d2ba01e4f58a9b2d1a03d
Reviewed-on: https://chromium-review.googlesource.com/1016166
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551886}
Former-commit-id: c0666c337affc1730befe2489b45049266a31e78